fix: update styles in styles.min.css and general.scss for improved layout consistency and menu item alignment

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -518,6 +518,22 @@ body.logged-in {
 				color: $primary-color;
 				font-weight: 700;
 			}
+
+			&.pll-parent-menu-item {
+				& > a {
+					display: flex;
+					align-items: center;
+				}
+
+				.sub-menu {
+					& > li {
+						& > a {
+							display: flex;
+							align-items: center;
+						}
+					}
+				}
+			}
 		}
 	}
 }
